--- a/static/sass/Header/Header.sass
+++ b/static/sass/Header/Header.sass
@@ -1,7 +1,7 @@
 @import "./HeaderDropdown"
 
 .header
-	height: 100%
+	// height: 100%
 	color: white
 	margin: 0
 	min-height: -webkit-min-content
