--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -15,8 +15,8 @@
 
 
 html
-	min-height: 100vh
-	max-height: 100vh
+	// min-height: 100vh
+	// max-height: 100vh
 	font-size: 14px
 	color: white
 	font-family: Lato-Regular
@@ -69,6 +69,9 @@ html
 h1
 	margin: 0.5rem
 	color: white
+
+#content
+	position: relative
 
 .app-body
 	// padding-left: 5em
